# Hical.github.io

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  config.json  hugo.toml  index.html  main.cc  staticrypt-template.html
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/css/extended/: markdown-colors.css
content/: search.md
content/posts/: 01-pmr-memory-pool-design.md  02-coroutine-driven-http-server.md  03-cpp26-reflection-dual-track.md  04-if-constexpr-tcp-ssl-unification.md  05-concepts-backend-abstraction.md  06-mpsc-lockfree-write-queue.md  Boost.Asio_异步IO与协程.md  Boost.Beast_HTTP与WebSocket.md  Boost.JSON_序列化与反序列化.md  Boost.MySQL_异步数据库访问.md  Boost.System_错误处理基石.md  Boost库学习课程_学习路径导航.md  C++Web框架性能实测.md  C++Web框架横评.md  C++web框架高并发性能测试.md  C++性能分析全景指南.md  CMake原理深度解析.md  Docker新手入门.md  Heaptrack找出无效内存分配.md  Hical-00-notes.md  Hical-01-notes.md  Hical-02-notes.md  Hical-03-notes.md  Hical-04-notes.md  Hical-05-notes.md  Hical-06-notes.md  Hical-07-notes.md  Hical-08-notes.md  Hical-09-notes.md  Hical-10-notes.md  Hical-Linux开发环境.md  Hical-Linux性能分析与优化实战指南.md  Hical-VM编译运行Benchmark流程.md  Hical-project-a.md  Hical-project-b.md  Hical-quick-rest-api.md  Hical协程入门.md  Hical性能优化全记录.md  Hical性能优化实战.md  Hical性能优化心得.md  (+93 more)
layouts/: index.html
public/: 404.html  CNAME  index.html  index.json  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/hello-world/: index.html
public/search/: index.html
public/tags/: index.html  index.xml
src/common/: types.h  utils.h
src/poker/: PokerGameEngine.cc  PokerGameEngine.h  PokerHttpController.cc  PokerHttpController.h  PokerRoomManager.cc  PokerRoomManager.h  PokerWsController.cc  PokerWsController.h
src/reda/: RedaHttpController.cc  RedaHttpController.h  RedaRoomManager.cc  RedaRoomManager.h  RedaWsController.cc  RedaWsController.h
static/: game.html
